# gazebo_traffic_light

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: GazeboTrafficLight.cfg
launch/: traffic_light_test.launch
models/cantilevered_light/: model.config  model.sdf
models/gazebo_traffic_light/: model.config  model.sdf
src/: GazeboTrafficLight.cpp  GazeboTrafficLight.hpp
worlds/: plugin_test.world
yaml/: light_sequence.yaml
